=========================================================
Fixed:
- Categories couldn't be saved [#345]
- Screenshot thumbnails were not used
- Mozshot auto screenshot function
- Sql-file
- Uploader class; uploading images was possible regardless errors
- Selected destination folder not visible as selected (Image Upload)
- Links could't be opened in Greybox or LightWindow from Index Page

Added:
- Social media buttons with Open Graph support
- Help and warning tips to forms, uses Lytebox
- Extended version of the Recent Links block
- Strip HTML and PHP tags from description in linkload.php
- Screenshots can be enlarged with LightWindow
- Replaced 'Close' tag in LightWindow with close icon
- Lytebox version 5.5
- Prototype version 1.7
- Scriptaculous version 1.9.0

Other:
- Disabled Tag field in submit form and preferences
- Disabled Tag blocks

Removed:
- Option to turn on/off latest links in Index Page

Removed files and folders:
- docs
- lightwindow.css
- blocks/imlinks_banner.php
- images/icon/blocks.png
- images/icon/blocks_small.png
- images/lightwindow/
- js/lightwindow.js
- templates/blocks/imlinks_block_banner.html

=========================================================
23.11.2011 - Version 1.11
=========================================================
Fixed:
- replaced Google Pagerank function
- typos in captcha causing submit form not to work in frontend

Added:
- links can be set online/offline by clicking icon in index
- submitted links indicated with hourglass icon in Status column
- updated flag of Georgia

Removed:
- banner option for categories

=========================================================
20.09.2011 - Version 1.10
=========================================================
Fixed:
- replaced Multimap with Bing Maps
- alphabetical listing using toolbar
- submit form not working in frontend
- total links for sub-cats in imLinks index page

Removed:
- support for DHTML editor and bbcode
- Simpy and Spurl from social bookmarks